Fixed table header alignments

--- a/assets/backend.css
+++ b/assets/backend.css
@@ -87,6 +87,11 @@ table.table.data tbody tr.orderfooter-taxes td {
 .price-table-modal table.data td.disabled {
     color: #ccc;
 }
+.price-table-modal table.headers th:not(:first-child),
+.price-table-modal table.data td:not(:first-child),
+.price-table-modal table.data td:not(:first-child) .string-input {
+    text-align: right;
+}
 
 .price-table-currency-selector .btn-link {
     padding-left: 0;
